Assets report api
